--- a/mtg-ui/src/app/features/card/card-detail/card-detail.component.scss
+++ b/mtg-ui/src/app/features/card/card-detail/card-detail.component.scss
@@ -21,3 +21,21 @@
     font-weight: 600;
   }
 }
+:host {
+  display: contents; /* let the <tr> inside be the real row */
+}
+
+td {
+  vertical-align: middle;
+}
+
+td.num input {
+  width: 100%;
+  max-width: 5rem;
+  padding: 0.15rem 0.35rem;
+  border-radius: 0.35rem;
+  border: 1px solid hsl(0 0% 35%);
+  background: hsl(0 0% 12%);
+  color: white;
+  font-size: 0.85rem;
+}
